--- a/Netflix_Movie_Recommender_System/Netflix_Pred_Part2.ipynb
+++ b/Netflix_Movie_Recommender_System/Netflix_Pred_Part2.ipynb
@@ -4,26 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='blue'>Data Science Academy - Machine Learning</font>\n",
-    "\n",
-    "# <font color='blue'>Capítulo 15</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Versão da Linguagem Python\n",
-    "from platform import python_version\n",
-    "print('Versão da Linguagem Python Usada Neste Jupyter Notebook:', python_version())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# <font color='blue'>Part 2 - Netflix Movie Recommendation System</font>"
    ]
   },
@@ -31,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instalando e Carregando os Pacotes"
+    "## Installing and Loading Packages"
    ]
   },
   {
@@ -40,24 +20,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Para atualizar um pacote, execute o comando abaixo no terminal ou prompt de comando:\n",
-    "# pip install -U nome_pacote\n",
+    "# To update a package, run the command below in terminal or command prompt:\n",
+    "# pip install -U package_name\n",
     "\n",
-    "# Para instalar a versão exata de um pacote, execute o comando abaixo no terminal ou prompt de comando:\n",
-    "# pip install nome_pacote==versão_desejada\n",
+    "# To install the exact version of a package, run the command below in terminal or command prompt:\n",
+    "# pip install package_name==desired_version\n",
     "\n",
-    "# Depois de instalar ou atualizar o pacote, reinicie o jupyter notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instala o pacote watermark. \n",
-    "# Esse pacote é usado para gravar as versões de outros pacotes usados neste jupyter notebook.\n",
-    "!pip install -q -U watermark"
+    "# After installing or updating the package, restart jupyter notebook.\n",
+    "\n",
+    "# Install the watermark package.\n",
+    "# This package is used to write versions of other packages used in this jupyter notebook.\n",
+    "# !pip install -q -U watermark\n",
+    "\n",
+    "# Python language version\n",
+    "from platform import python_version\n",
+    "print('Python Language Version Used In This Jupyter Notebook:', python_version())\n",
+    "\n",
+    "# Versions of packages used in this jupyter notebook\n",
+    "%reload_ext watermark\n",
+    "%watermark -a \"Joao Salero\" --iversions"
    ]
   },
   {
@@ -79,17 +60,6 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import xgboost as xgb\n",
     "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Versões dos pacotes usados neste jupyter notebook\n",
-    "%reload_ext watermark\n",
-    "%watermark -a \"Data Science Academy\" --iversions"
    ]
   },
   {
@@ -378,7 +348,7 @@
    "outputs": [],
    "source": [
     "# Print\n",
-    "print('Média de Avaliação do Usuário ' + str(um_usuario) + ':', amostra_medias_treino['user'][um_usuario])"
+    "print('User Rating Average ' + str(um_usuario) + ':', amostra_medias_treino['user'][um_usuario])"
    ]
   },
   {
@@ -425,7 +395,7 @@
    "outputs": [],
    "source": [
     "# Pring\n",
-    "print('Média de Avaliação do Filme ' + str(um_filme) + ':', amostra_medias_treino['movie'][um_filme])"
+    "print('Film Rating Average ' + str(um_filme) + ':', amostra_medias_treino['movie'][um_filme])"
    ]
   },
   {
@@ -579,7 +549,7 @@
     "            reg_data_file.write(','.join(map(str, row)))\n",
     "            reg_data_file.write('\\n')        \n",
     "            if (count)%10000 == 0:\n",
-    "                print(\"Concluído para {} linhas----- {}\".format(count, datetime.now() - start))"
+    "                print(\"Completed for {} lines----- {}\".format(count, datetime.now() - start))"
    ]
   },
   {
@@ -744,7 +714,7 @@
     "            reg_data_file.write(','.join(map(str, row)))\n",
     "            reg_data_file.write('\\n')        \n",
     "            if (count)%1000 == 0:\n",
-    "                print(\"Concluído em {} linhas----- {}\".format(count, datetime.now() - start))"
+    "                print(\"Completed for {} lines----- {}\".format(count, datetime.now() - start))"
    ]
   },
   {
@@ -832,7 +802,7 @@
     "id": "Cg4ii0eRxrrB"
    },
    "source": [
-    "Abaixo algumas funções para executar o modelo."
+    "Below are some functions to run the model."
    ]
   },
   {
